# zimfarm

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  EDITORS_GUIDE.md  INTEGRATORS_GUIDE.md  PR_1612_Changes.md  README.md  api.py  database.py  docker-compose.yml  dockerfile  package.json  test.py  wsgi.py  zimfarm.config  zimfarm.ini  zimfarm.service
backend/: '  .pre-commit-config.yaml  Dockerfile  README.md  V1_TO_V2_MIGRATION.md  api.Dockerfile  background-tasks.Dockerfile  logs.txt  migrate_task_files.py  periodic-tasks.py  periodic.conf  periodic.conf.dev  prestart.sh  pyproject.toml  requirements.txt  supervisor-listener.py  tasks.py  update_language_codes.py
backend/docs/: openapi_v1.yaml  swagger-ui.html
backend/maint-scripts/: README.md  add_categories_to_tags.py  create_default_recipe_durations.py  create_ted_topics_recipes.py  fetch_blob_raw_content.py  find_recipes_in_errors.py  find_schedules_in_errors.py  generate_v2_docs.py  get_token.py  list_most_recent_tasks.py  list_running_tasks.py  monthly_report_tasks.py  relaunch_failed_recipes.py  report_youtube_api_keys.conf.json  report_youtube_api_keys.py  report_youtube_api_keys.txt  requirements.txt  restore_mwoffliner_article_list.py  toggle_scraper.py  update_file_illustration_metadata.py  update_offliner_definition_blobs.py  update_offliner_definition_flag.py  update_offliner_definition_graphemes.py  update_offliner_definitions_zim_metadata.py  update_recipe_blobs.py  update_schedule_blobs.py  update_scraper_version.py  update_similarity_data.py  upload_zimcheck_results_to_s3.py  validate_all_recipes.py
backend/src/zimfarm_backend/: __init__.py  alembic.ini  exceptions.py  main.py  periodic-scheduler.py  periodic-tasks.py  settings.py
backend/src/zimfarm_backend/api/: constants.py  entrypoint.py  image.py  token.py
backend/src/zimfarm_backend/background_tasks/: __init__.py  cancel_tasks.py  constants.py  delete_orphaned_blobs.py  entrypoint.py  history_cleanup.py  request_tasks.py  retry_cms_notifications.py  send_cms_notifications.py  task_config.py
backend/src/zimfarm_backend/common/: __init__.py  constants.py  emailing.py  enum.py  enums.py  external.py  notifications.py  roles.py  upload.py  utils.py
backend/src/zimfarm_backend/db/: __init__.py  account.py  blob.py  contexts.py  exceptions.py  files.py  language.py  mixins.py  models.py  offliner.py  offliner_definition.py  recipe.py  refresh_token.py  requested_task.py  schedule.py  ssh_key.py  tags.py  tasks.py  user.py  worker.py
backend/src/zimfarm_backend/migrations/: env.py
backend/src/zimfarm_backend/routes/: __init__.py  base.py  dependencies.py  http_errors.py  models.py  utils.py
backend/src/zimfarm_backend/templates/: email_body.html  email_subject.txt  slack_fallback.txt  slack_message.txt  slack_title.txt
backend/tests/: conftest.py  test_builder.py  test_check_permissions.py  test_get_timestamp.py  test_github_registry.py  test_handle_file_event.py  test_illustrations.py  test_offliner_flag.py  test_offliner_serializer.py  test_offliners_utils.py  test_task_event_handlers.py  test_token.py  test_token_decoder.py  test_token_introspection_cache.py  test_transformers.py  test_upload.py  test_validators.py  test_verify_kiwix_access_token.py  utils_for_tests.py
backend/tests/background_tasks/: test_cancel_incomplete_tasks.py  test_cancel_stale_tasks.py  test_delete_orphaned_blobs.py  test_history_cleanup.py  test_retry_cms_notifications.py  test_send_cms_notifications.py  test_task_config.py
backend/tests/db/: test_account.py  test_blob.py  test_contexts.py  test_language.py  test_offliner.py  test_offliner_definition.py  test_recipe.py  test_refresh_token.py  test_requested_task.py  test_schedule.py  test_ssh_key.py  test_tags.py  test_task.py  test_user.py  test_worker.py
backend/tests/integration/: conftest.py
backend/tests/routes/: conftest.py  test_account.py  test_auth.py  test_blob.py  test_contexts.py  test_dependencies.py  test_language.py  test_offliners.py  test_recipes.py  test_requested_task.py  test_schedules.py  test_status.py  test_tags.py  test_task.py  test_user.py  test_worker.py
recipesauto/: .gitignore  README.md  pyproject.toml
recipesauto/src/recipesauto/: __main__.py  constants.py  context.py  definition.py  devdocs.py  entrypoint.py  freecodecamp.py  gutenberg.json  gutenberg.py  maps.json  maps.py  overrides.yaml  phet.py  processor.py  shamela.py  stackexchange.json  stackexchange.py  ted.py  utils.py
worker/: .env  Dockerfile  README.md  deploy.sh  deploy_test.sh  docker-compose.yml  entrypoint.sh  init.sh  manager-Dockerfile  manager-requirements.txt  pyproject.toml  requirements.txt  setup.py  start.py  task-Dockerfile  task-requirements.txt  task_worker.py  tasks.py  worker_manager.py
worker/app/: docker_commands.py  main.py  sftp_main.py  tasks.py  worker.py
worker/app/operations/: __init__.py  base.py  operation.py  pull_container.py  run_dnscache.py  run_gutenberg.py  run_mwoffliner.py  run_phet.py  run_redis.py  run_socket.py  run_youtube.py  upload.py
worker/app/tasks/: Base.py  MWOffliner.py  __init__.py  base.py  base.py.orig  gutenberg.py  mwoffliner.py  phet.py  youtube.py
worker/app/utils/: __init__.py  docker.py  encoder.py  serialize.py  settings.py  sftp.py  status.py
worker/app/worker/: __init__.py
worker/celery/app/: encoder.py  main.py
worker/contrib/: wmf-worker-setup.md  zimfarm.config.example  zimfarm.sh
worker/src/common/: __init__.py  constants.py  cryptography.py  docker.py  requests.py  utils.py  worker.py
worker/src/manager/: worker.py
worker/src/task/: worker.py  zim.py
worker/worker/: __init__.py  main.py
worker/worker/operations/: operation.py  run_mwoffliner.py  upload.py
worker/worker/tasks/: __init__.py  mwoffliner.py
worker/worker/utils/: setting.py
worker/zimfarmworker/: __main__.py
worker/zimfarmworker/operations/: __init__.py  operation.py  pull_container.py  run_redis.py  upload.py
worker/zimfarmworker/tasks/: base.py  mwoffliner.py
worker/zimfarmworker/utils/: serialize.py  setting.py
(+1390 files in other folders)
