[build-system]
requires = ["hatchling", "hatch-openzim"]
build-backend = "hatchling.build"

[project]
name = "recipesauto"
requires-python = ">=3.12,<3.13"
description = "Automatically create and maintain a group of Zimfarm recipes"
readme = "../README.md"
dependencies = [
  "requests==2.33.0",
  "types-requests==2.32.0.20240914",
  "PyYAML==6.0.2",
  "beautifulsoup4==4.13.3",
  "types-beautifulsoup4==4.12.0.20250204",
  "lxml==6.1.0",
  "pycountry == 24.6.1"
]
dynamic = ["authors", "classifiers", "keywords", "license", "version", "urls"]

[tool.hatch.metadata.hooks.openzim-metadata]
additional-keywords = ["zimfarm"]

[tool.hatch.build.hooks.openzim-build]

[project.optional-dependencies]
scripts = ["invoke==2.2.0"]
qa = [
    "ruff==0.15.12",
    "pyright==1.1.409",
]
test = ["pytest==9.0.3", "coverage==7.6.1"]
dev = [
  "pre-commit==3.8.0",
  "debugpy==1.8.5",
  "recipesauto[scripts]",
  "recipesauto[test]",
  "recipesauto[qa]",
  "humanfriendly==10.0"
]

[project.scripts]
recipesauto = "recipesauto.__main__:main"

[tool.hatch.version]
path = "src/recipesauto/__about__.py"

[tool.hatch.build]
exclude = ["/.github"]

[tool.hatch.build.targets.wheel]
packages = ["src/recipesauto"]

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.test]
features = ["scripts", "test"]

[tool.hatch.envs.test.scripts]
run = "inv test --args '{args}'"
run-cov = "inv test-cov --args '{args}'"
report-cov = "inv report-cov"
coverage = "inv coverage --args '{args}'"
html = "inv coverage --html --args '{args}'"

[tool.hatch.envs.qa]
template = "qa"
skip-install = false
features = ["scripts", "qa", "test"]

[tool.hatch.envs.qa.scripts]
check-lint = "inv check-lint --args '{args}'"
check-format = "inv check-format --args '{args}'"
check-type = "inv check-type --args '{args}'"
check-all = "inv check-all --args '{args}'"
fix-format = "inv fix-format --args '{args}'"
fix-lint = "inv fix-lint --args '{args}'"
fix-all = "inv fix-all --args '{args}'"

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
  "A", # flake8-builtins
  # "ANN",  # flake8-annotations
  "ARG", # flake8-unused-arguments
  # "ASYNC",  # flake8-async
  "B", # flake8-bugbear
  # "BLE",  # flake8-blind-except
  "C4",  # flake8-comprehensions
  "C90", # mccabe
  # "COM",  # flake8-commas
  # "D",  # pydocstyle
  # "DJ",  # flake8-django
  "DTZ", # flake8-datetimez
  "E",   # pycodestyle (default)
  "EM",  # flake8-errmsg
  # "ERA",  # eradicate
  # "EXE",  # flake8-executable
  "F", # Pyflakes (default)
  # "FA",  # flake8-future-annotations
  "FBT", # flake8-boolean-trap
  # "FLY",  # flynt
  # "G",  # flake8-logging-format
  "I",   # isort
  "ICN", # flake8-import-conventions
  # "INP",  # flake8-no-pep420
  # "INT",  # flake8-gettext
  "ISC", # flake8-implicit-str-concat
  "N",   # pep8-naming
  # "NPY",  # NumPy-specific rules
  # "PD",  # pandas-vet
  # "PGH",  # pygrep-hooks
  # "PIE",  # flake8-pie
  # "PL",  # Pylint
  "PLC", # Pylint: Convention
  "PLE", # Pylint: Error
  "PLR", # Pylint: Refactor
  "PLW", # Pylint: Warning
  # "PT",  # flake8-pytest-style
  # "PTH",  # flake8-use-pathlib
  # "PYI",  # flake8-pyi
  "Q", # flake8-quotes
  # "RET",  # flake8-return
  # "RSE",  # flake8-raise
  "RUF", # Ruff-specific rules
  "S",   # flake8-bandit
  # "SIM",  # flake8-simplify
  # "SLF",  # flake8-self
  "T10", # flake8-debugger
  "T20", # flake8-print
  # "TCH",  # flake8-type-checking
  # "TD",  # flake8-todos
  "TID", # flake8-tidy-imports
  # "TRY",  # tryceratops
  "UP",  # pyupgrade
  "W",   # pycodestyle
  "YTT", # flake8-2020
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow use of date.today
  "DTZ011",
  # Remove flake8-errmsg since we consider they bloat the code and provide limited value
  "EM",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore warnings on subprocess.run / popen
  "S603",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.lint.isort]
known-first-party = ["recipesauto"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]
"tests-integration/**/*" = ["PLR2004", "S101", "TID252"]

[tool.pytest.ini_options]
minversion = "7.3"
testpaths = ["tests"]
pythonpath = [".", "src"]

[tool.coverage.paths]
great_project = ["src/recipesauto"]
tests = ["tests"]

[tool.coverage.run]
source_pkgs = ["recipesauto"]
branch = true
parallel = true
omit = ["src/recipesauto/__about__.py"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.pyright]
include = ["src", "tests", "tasks.py"]
exclude = [".env/**", ".venv/**", "src/recipesauto/templates", ".hatch"]
extraPaths = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
disableBytesTypePromotions = true
